upload the background image and style the welcome page section relates #9

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
   </head>
   <body>
     <main>
-      <nav></nav>
-      <header></header>
+      <!-- <nav></nav> -->
+      <div class="hero">
+        <h1 class="title">Welcome to our team page</h1>
+        <p class="discription">For Memorable Digital Experiences</p>
+      </div>
       <section class="our-team"></section>
       <section class="about-us"></section>
       <section class="form"></section>
