configure prettier Realate #5

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
     ></script>
   </head>
   <body>
- 
+    <main>
       <nav>
-       <div class="logo">
-        <a href="#our-team"><img src="logo.png"></a>
-       </div>
-          
+        <div class="logo">
+          <a href="#our-team"><img src="logo.png" /></a>
+        </div>
 
         <ul>
           <li><a href="#our-team">our team</a></li>
@@ -31,7 +30,7 @@
           <li><a href="#form">contact us</a></li>
         </ul>
       </nav>
-      
+
       <header></header>
       <section id="our-team" class="our-team"></section>
       <section id="about-us" class="about-us"></section>
