Make form responsive form responsive with all screens Relates #11

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <h2 class="form-title">Do you want to hire us?</h2>
             <form action="" class="form">
                 <label for="name" class="form-label">name:</label>
-                <input type="text" id="name" class="form-input">
+                <input type="text" id="name" class="form-input" />
                 <label class="form-label" for="email">Email:</label>
-                <input type="text" class="form-input" id="email">
+                <input type="text" class="form-input" id="email" />
                 <label class="form-label" for="message">Message:</label>
-                <textarea id="message" class="form-text-area" style="resize: none;"></textarea>
-                <input class="form-submit" type="submit" value="submit">
+                <textarea id="message" class="form-text-area" style="resize: none"></textarea>
+                <input class="form-submit" type="submit" value="submit" />
             </form>
         </section>
         <footer></footer>
