Add Our Team Section content and style #12

--- a/index.html
+++ b/index.html
@@ -16,12 +16,152 @@
       src="https://kit.fontawesome.com/57c783de70.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.iconify.design/2/2.1.1/iconify.min.js"></script>
   </head>
   <body>
     <main>
       <nav></nav>
       <header></header>
-      <section class="our-team"></section>
+      <h2 class="text">Our Team</h2>
+      <!-- Our Team Section  -->
+      <section class="our-team">
+        <div class="container">
+          <div class="card">
+            <div class="img">
+              <img src="imges/photo.png" alt="" />
+            </div>
+            <div class="content">
+              <p class="name">Deena AlGhazali</p>
+              <p class="Discription">Full Stack Developer</p>
+              <div class="icons">
+                <ul>
+                  <li>
+                    <a href="https://github.com/DeenaAlghazali">
+                      <i class="fab fa-github"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/in/deena-alghazali-69ab34221/"
+                    >
+                      <i class="fab fa-linkedin-in"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="https://www.codewars.com/users/DeenaAlghazali"
+                      ><span
+                        class="iconify"
+                        data-icon="simple-icons:codewars"
+                        style="color: white"
+                        data-width="21"
+                        data-height="21"
+                      ></span
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="img">
+              <img src="imges/photo.png" alt="" />
+            </div>
+            <div class="content">
+              <p class="name">Khaled EL Khudary</p>
+              <p class="Discription">full stack developer</p>
+              <div class="icons">
+                <ul>
+                  <li>
+                    <a href="#"> <i class="fab fa-github"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"> <i class="fab fa-linkedin-in"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><span
+                        class="iconify"
+                        data-icon="simple-icons:codewars"
+                        style="color: white"
+                        data-width="21"
+                        data-height="21"
+                      ></span
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="card">
+            <div class="img">
+              <img src="imges/photo.png" alt="" />
+            </div>
+            <div class="content">
+              <p class="name">Mohammed Hamada</p>
+              <p class="Discription">full stack developer</p>
+              <div class="icons">
+                <ul>
+                  <li>
+                    <a href="https://github.com/Mohammed-Hamada">
+                      <i class="fab fa-github"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"> <i class="fab fa-linkedin-in"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><span
+                        class="iconify"
+                        data-icon="simple-icons:codewars"
+                        style="color: white"
+                        data-width="21"
+                        data-height="21"
+                      ></span
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="img">
+              <img src="imges/photo.png" alt="" />
+            </div>
+            <div class="content">
+              <p class="name">Salma Issa</p>
+              <p class="Discription">Full Stack Developer</p>
+              <div class="icons">
+                <ul>
+                  <li>
+                    <a href="https://github.com/SalmaIssa96">
+                      <i class="fab fa-github"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"> <i class="fab fa-linkedin-in"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://www.codewars.com/users/SalmaIssa96"
+                      ><span
+                        class="iconify"
+                        data-icon="simple-icons:codewars"
+                        style="color: white"
+                        data-width="21"
+                        data-height="21"
+                      ></span
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End The Our Team Section  -->
       <section class="about-us"></section>
       <section class="form"></section>
       <footer></footer>
