--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
         <p class="discription">For Memorable Digital Experiences</p>
       </div>
       <section class="our-team"></section>
-      <section class="about-us"></section>
+      <section class="about-us">
+        <h1 class="about-title">About Us</h1>
+        <hr />
+        <p class="about-discription">
+          We are a four-person team that wish to share our personal information
+          with IT companies. We'd want to talk about how to reach out to clients
+          through this website; we'd like to make it easier for them to contact
+          with us; we'd like to hear their messages and know what they want from
+          us.
+        </p>
+      </section>
       <section class="form"></section>
       <footer></footer>
     </main>
