--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
         <section class="our-team"></section>
         <section class="about-us"></section>
         <section class="form-section">
-            <h2 class="form-title">Do you want to hire us?</h2>
-            <form action="" class="form">
-                <label for="name" class="form-label">name:</label>
-                <input type="text" id="name" class="form-input" />
-                <label class="form-label" for="email">Email:</label>
-                <input type="text" class="form-input" id="email" />
-                <label class="form-label" for="message">Message:</label>
-                <textarea id="message" class="form-text-area" style="resize: none"></textarea>
-                <input class="form-submit" type="submit" value="submit" />
-            </form>
+            <div class="form-container">
+                <h2 class="form-title">Do you want to hire us?</h2>
+                <form action="" class="form">
+                    <label for="name" class="form-label">name:</label>
+                    <input type="text" id="name" class="form-input" />
+                    <label class="form-label" for="email">Email:</label>
+                    <input type="text" class="form-input" id="email" />
+                    <label class="form-label" for="message">Message:</label>
+                    <textarea id="message" class="form-text-area" style="resize: none"></textarea>
+                    <input class="form-submit" type="submit" value="submit" />
+                </form>
+
+            </div>
         </section>
         <footer></footer>
     </main>
