--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
         <div class="logo">
           <a href="#our-team"><img src="logo.png" /></a>
         </div>
+<input type="checkbox" id="check">
+<label for="check">
+  <i class="fas fa-bars" id="btn"></i>
 
+</label>
         <ul>
           <li><a href="#our-team">our team</a></li>
           <li><a href="#about-us">about us</a></li>
