Edit the our team section #12

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
   </head>
   <body>
     <main>
-      <nav></nav>
-      <header></header>
-      <h2 class="text">Our Team</h2>
-      <!-- Our Team Section  -->
+      <!-- Our Team Section  -->           
       <section class="our-team">
+      <h2 class="text">Our Team</h2>
+      <div class="ourTeam">
         <div class="container">
           <div class="card">
             <div class="img">
@@ -68,8 +67,8 @@
               <img src="imges/photo.png" alt="" />
             </div>
             <div class="content">
-              <p class="name">Khaled EL Khudary</p>
-              <p class="Discription">full stack developer</p>
+              <p class="name">Khaled ELKhudary</p>
+              <p class="Discription">Full Stack Developer</p>
               <div class="icons">
                 <ul>
                   <li>
@@ -101,7 +100,7 @@
             </div>
             <div class="content">
               <p class="name">Mohammed Hamada</p>
-              <p class="Discription">full stack developer</p>
+              <p class="Discription">Full Stack Developer</p>
               <div class="icons">
                 <ul>
                   <li>
@@ -160,11 +159,8 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <!--End The Our Team Section  -->
-      <section class="about-us"></section>
-      <section class="form"></section>
-      <footer></footer>
     </main>
   </body>
 </html>
