add footer realate #6

--- a/index.html
+++ b/index.html
@@ -24,7 +24,28 @@
       <section class="our-team"></section>
       <section class="about-us"></section>
       <section class="form"></section>
-      <footer></footer>
+
+      <section class="footer">
+        <ul class="list">
+          <li>
+            <a href="#our-team">our team</a>
+          </li>
+          <li>
+            <a href="#about-us">about us</a>
+          </li>
+          <li>
+            <a href="#form">contact us</a>
+          </li>
+        </ul> 
+          <div class="social">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-snapchat"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+          </div>
+          
+      </section>
+
     </main>
   </body>
 </html>
