--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <a href="#"><img src="logo.png" /></a>
+                    <!-- <a href="#"><img src="logo.png" /></a> -->
                 </div>
                 <input type="checkbox" id="check" />
                 <label for="check">
@@ -48,7 +48,7 @@
                 <div class="container">
                     <div class="card">
                         <div class="img">
-                            <img src="imges/photo.png" alt="" />
+                            <img src="assests/photo.png" alt="" />
                         </div>
                         <div class="content">
                             <p class="name">Deena AlGhazali</p>
@@ -85,7 +85,7 @@
 
           <div class="card">
             <div class="img">
-              <img src="imges/photo.png" alt="" />
+              <img src="assests/photo.png" alt="" />
             </div>
             <div class="content">
               <p class="name">Khaled ELKhudary</p>
@@ -116,7 +116,7 @@
                 <div class="container">
                     <div class="card">
                         <div class="img">
-                            <img src="imges/photo.png" alt="" />
+                            <img src="assests/photo.png" alt="" />
                         </div>
                         <div class="content">
                             <p class="name">Mohammed Hamada</p>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="card">
                         <div class="img">
-                            <img src="imges/photo.png" alt="" />
+                            <img src="assests/photo.png" alt="" />
                         </div>
                         <div class="content">
                             <p class="name">Salma Issa</p>
