add footer realate #6

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <section class="about-us"></section>
       <section class="form"></section>
 
+      <!-- Start Footer Section> -->
       <section class="footer">
         <ul class="list">
           <li>
@@ -43,8 +44,8 @@
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-facebook-f"></i></a>
           </div>
-          
       </section>
+      <!-- Start Footer Section> -->
 
     </main>
   </body>
